===============================================================
Tag name:  rtm1_0_57
Originator(s): erik
Date: Jul 01, 2016
One-line Summary: Remove ESMF test

M       cime_config/testdefs/testlist_rtm.xml

===============================================================
Tag name:  rtm1_0_56
Originator(s): erik
Date: Apr 14, 2016
One-line Summary: Turn off for CLM_ACCELERATED_SPINUP="on" and fix a few bugs

Have RTM react to CLM_ACCELERATED_SPINUP setting from CLM and turn itself off
by default if it's "on".

Also fix following bugs:

1674 -- assumes history files are no_leap calendar
2230 -- for RTM delt_save not initialized

M       bld/build-namelist ---- Check CLM_ACCELERATED_SPINUP, read do_rtm from
           defaults file and check based on CLM_ACCELERATED_SPINUP and MOSART_MODE
M       bld/namelist_files/namelist_defaults_rtm.xml  - add do_rtm settings
M       src/riverroute/RtmHistFile.F90 -- Increase filename length to 255
           check calendar type before writing to history file
M       src/riverroute/RtmIO.F90 -------- initialize delt_save (2230)
M       src/riverroute/RtmMod.F90 ------- Increase string length to 255
M       src/riverroute/RtmRestFile.F90 -- Increase string length to 255
M       src/riverroute/RtmTimeManager.F90 Add NO_LEAP_C and GREGORIAN_C as public constants (2307)

===============================================================
Tag name:  rtm1_0_55
Originator(s): andre
Date: Oct 13, 2015
One-line Summary: negative runoff remove direct to ocean runoff from Sean Swenson

- Remove directo to ocean runnoff (Sean Swenson)
- add error checking on history file name length.
- add default test mod with hourly output from rtm

A  +    cime_config/testdefs/testmods_dirs/rtm/rtmOnFloodOnEffvelOff/include_user_mods
A  +    cime_config/testdefs/testmods_dirs/rtm/default
A  +    cime_config/testdefs/testmods_dirs/rtm/default/user_nl_rtm
A  +    cime_config/testdefs/testmods_dirs/rtm/rtmOnFloodOnEffvelOn/include_user_mods